style.css
/* ... */
.education__profit > .item {
    display: flex;
    flex-direction: column;
}

.education__profit img {
    margin: 0 auto;
    width: 40px;
}

.education__profit p {
    color: white;
    text-align: center;
    margin: 1rem 1rem;
    font-size: 16px;
}

/*о проекте*/
.education__about--background {
    background: url(./img/background_about_project.png) no-repeat;
    -moz-background-size: 100%; /* Firefox 3.6+ */
    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
    -o-background-size: 100%; /* Opera 9.6+ */
    background-size: 100%; /* Современные браузеры */
}

.education__about {
    padding-bottom: 6%;
}

.education__about--items{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
	gap: var(--grid-gap);
}

.video-container {
	position: relative;
	width: 100%;          /* видео займет всю ширину блока */
	padding-bottom: 56.25%; /* пропорция 16:9 → (9 / 16 * 100) */
	height: 0;
	overflow: hidden;
}

.video-container iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.education__about p, .education__about ul {
    /* width: 560px; */
    margin: 1rem auto;
	font-size: 18px;
}
.education__about li {
	margin-top: 0.5rem;
}
/*кому нужен*/
.education__need--background {
    background-color: rgba(93, 113, 221, 0.03);
}

.education__need {
    padding-top: 2rem;
    padding-bottom: 2rem;
}

.education__need--items {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding-top: 3rem;
    padding-bottom: 3rem;
    gap: var(--grid-gap);
}

.education__need--items > .item {
    display: grid;
    grid-template-columns: 0.5fr 3.5fr;
}

.education__need--items > .item p {
    margin: 0;
}

/*задачи*/
.education__tasks h2 {
    padding: 2rem 0;
}

.education__tasks > .items {
    background-image: url(./img/background_img_tasks.png);
    background-repeat: no-repeat;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: var(--grid-gap);
    padding-bottom: 7rem;
}

.education__tasks > .items > .item {
    width: 300px;
    background: #F9FAFC;
    box-shadow: 0px 38px 56px rgba(191, 204, 225, 0.39), 0px 20.7957px 15.3272px rgba(191, 204, 225, 0.177553), 0px 15.8955px 0px rgba(191, 204, 225, 0.0372931);
    border-radius: 8px;
    padding: 10px 22px;
    margin: auto;
}

.education__tasks > .items > .item > p {
    margin: 0;
    padding: 0;
    color: var(--accent-color);
}

/*профессиональный путь*/
.education__way {
    padding-top: 2rem;
    padding-bottom: 2rem;
}

.education__way > .items {
    display: grid;
    grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
    padding-top: 3rem;
    padding-bottom: 3rem;
    gap: var(--grid-gap);
}

/*дизайн или профориентация*/
.education__advantages--background {
    background-color: rgba(93, 113, 221, 0.03);
}

.education__advantages {
    padding-top: 2rem;
    padding-bottom: 2rem;
}

.education__advantages > .items_title {
    background-repeat: no-repeat;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: var(--grid-gap);
    padding-bottom: 2rem;
}

.education__advantages > .items_title > .item {
    width: 490px;
    box-shadow: 0px 38px 56px rgba(191, 204, 225, 0.39), 0px 20.7957px 15.3272px rgba(191, 204, 225, 0.177553), 0px 15.8955px 0px rgba(191, 204, 225, 0.0372931);
    border-radius: 8px;
    padding: 10px 22px;
    margin: auto;
	font-weight: bold;
	text-align: center;
}

.education__advantages > .items_title > .item:nth-child(1) {
    background-color: #0c68f5;
	font-size: 24px;
}

.education__advantages > .items_title > .item:nth-child(2) {
    background-color: #ff0000a3;
}

.education__advantages > .items {
    background-repeat: no-repeat;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: var(--grid-gap);
    padding-bottom: 7rem;
}

.education__advantages > .items > .item {
    width: 490px;
    /* min-height: 90px; */
    background: #F9FAFC;
    box-shadow: 0px 38px 56px rgba(191, 204, 225, 0.39), 0px 20.7957px 15.3272px rgba(191, 204, 225, 0.177553), 0px 15.8955px 0px rgba(191, 204, 225, 0.0372931);
    border-radius: 8px;
    padding: 10px 22px;
    margin: auto;
}

.education__advantages > .items .item:nth-child(odd) {
    background-color: #0c68f554;
}

.education__advantages > .items .item:nth-child(even) {
    background-color: #ff000047;
}

.education__advantages > .items > .item > p {
    margin: 0;
    padding: 0;
    /* color: var(--accent-color); */
   
}

/*обо мне*/
.education__me--background {
    background: url(./img/background_about_me.png) no-repeat;
    -moz-background-size: cover; /* Firefox 3.6+ */
    -webkit-background-size: cover; /* Safari 3.1+ и Chrome 4.0+ */
    -o-background-size: cover; /* Opera 9.6+ */
    background-size: cover; /* Современные браузеры */
}

.education__me--content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: var(--grid-gap);
    padding-bottom: 7rem;
}

.education__me--content > .items {
    padding: 3rem 0;
}

.education__me--content > .items > .item {
    display: grid;
    grid-template-columns: 1fr 11fr;
    margin-bottom: 1.3rem;
}

.education__me--content > .items > .item > img {
    height: 20px;
}

.education__me--content > .items > .item > p {
    margin: 0;
}

/*зписаться на консультацию*/
.education__form--background {
    background: url(./img/background_form.png) no-repeat;
    -moz-background-size: cover; /* Firefox 3.6+ */
    -webkit-background-size: cover; /* Safari 3.1+ и Chrome 4.0+ */
    -o-background-size: cover; /* Opera 9.6+ */
    background-size: cover; /* Современные браузеры */
}

.education__form {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--grid-gap);
}

.education__form--left h2 {
    color: white;
    font-size: 36px;
    font-weight: 500;
    padding: 2rem 0 1rem 0;
    line-height: 46px;
}

.education__form--left p {
    color: white;
    line-height: 24px;
    max-width: 390px;
}
/* ... */

